<resources>
    <string name="app_name">Speed Laundry</string>
    <string name="app_info">Dashboard Administrator, Driver dan Karyawan</string>


    <!--    <string name="facebook_app_id">351827532506487</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb351827532506487</string>-->
    <string name="facebook_app_id">638752070110991</string>
    <string name="fb_login_protocol_scheme">fb638752070110991</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="register_name_hint">Nama</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Akun Baru? </string>
    <string name="facebook">Continue with Facebook</string>
    <string name="back">Back</string>
    <string name="menu_home">Home</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_live">Live Broadcast</string>
    <string name="live_broadcast">Live Broadcast</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="powered_by">Powered by</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="profile.change_password_success">You have successfuly change your\npassword.</string>
    <string name="button.confirm">Konfirmasi</string>
    <string name="register.confirm_password">Konfirmasi Password</string>
    <string name="register.password">Password</string>
    <string name="register.otp_title">Please type the verification code\nsent to phone number</string>
    <string name="button.verify">Verify</string>
    <string name="registration">Registrasi</string>
    <string name="verification">VERIFICATION</string>
    <string name="dialog.title_daily">Click collect to get your daily reward</string>
    <string name="contest.participants">Participants</string>
    <string name="register_desc">Mohon isi semua data yang tersedia untuk mendaftarkan akun!</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="tnc"><u>Terms and Conditions</u></string>
    <string name="referral_code">Referral Code</string>
    <string name="confirm_password">Ulangi Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="buy_power_combo"><![CDATA[Buy Power & Combo]]></string>
    <string name="buy_helper_amp_combo"><![CDATA[Buy Helper & Combo]]></string>
    <string name="campaign_event">Campaign Event</string>
    <string name="congratulations">Congratulations</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="live_contest">Live Contest</string>
    <string name="collect">Collect</string>
    <string name="live_contest_leaderboard">Live Contest Leaderboard</string>
    <string name="request_otp"><u>Request OTP</u></string>
    <string name="continue_with">Continue with</string>
    <string name="ask_token_from_friend">Ask token from friend</string>
    <string name="are_you_sure_want_to_exit">Are you sure want to quit app?</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="OK">OK</string>
    <string name="default_notification_channel_id">laundryapp_channel</string>
    <string name="notification">Notification</string>
    <string name="monthly_medal_race">Monthly\nMedal Race</string>
    <string name="more_rewards_awaits">More rewards awaits</string>

    <!-- Laundry Item -->
    <string name="menu_manage">Admin</string>
    <string name="menu_transaction">Transaksi</string>
    <string name="menu_account">Akun</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="top_up">Top up</string>
    <string name="di_proses">Di Proses</string>
    <string name="di_antar">Di Antar</string>
    <string name="pengecekan">Pengecekan</string>
    <string name="pending_pembayaran">Pending Pembayaran</string>
    <string name="kedaluwarsa">Kedaluwarsa</string>
    <string name="di_cancel">Di Cancel</string>
    <string name="di_antar_pulang">Di Antar Pulang</string>
    <string name="selesai">Selesai</string>
    <string name="di_cuci">Di Cuci</string>
    <string name="menunggu_konfirmasi">Menunggu Konfirmasi</string>
    <string name="gagal">Gagal</string>
    <string name="sukses">Sukses</string>

</resources>